# Forge-Gameplay-Tooling-Sandbox-

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
assets/abilities/: ability_manifest.json  fireball.json  power_shot.json  shield_bash.json
assets/units/: archer.json  knight.json  mage.json  sample_units.json  unit_manifest.json
include/data/: AbilityLoader.h  AbilityTemplate.h  ContentPaths.h  UnitLoader.h  UnitTemplate.h
include/gameplay/: Stats.h  Unit.h
include/simulation/: SimulationState.h
include/ui/: SimulationPanel.h
src/: main.cpp
src/data/: AbilityLoader.cpp  ContentPaths.cpp  UnitLoader.cpp
src/simulation/: SimulationState.cpp
src/ui/: SimulationPanel.cpp
tests/: test_smoke.cpp
